--- a/app/src/main/res/layout/drawer_header.xml
+++ b/app/src/main/res/layout/drawer_header.xml
@@ -18,14 +18,15 @@
         app:civ_border_width="0dp" />
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="60dp"
         android:layout_height="48dp"
         android:layout_marginLeft="16dp"
-        android:gravity="left|center_vertical"
+        android:gravity="center"
         android:orientation="vertical">
 
         <TextView
             android:id="@+id/tv_head"
+            android:gravity="center"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/app_name"
