--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -99,6 +99,43 @@
                     </LinearLayout>
 
                     <LinearLayout
+                        android:id="@+id/ll_card"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="16dp"
+                        android:layout_marginTop="16dp"
+                        android:gravity="center_vertical"
+                        android:orientation="horizontal">
+
+                        <ImageView
+                            android:id="@+id/iv_card"
+                            android:layout_width="24dp"
+                            android:layout_height="24dp"
+                            android:layout_marginLeft="16dp"
+                            android:src="@mipmap/ic_bookmark_black_24dp"
+                            android:tint="#FF999999" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="16dp"
+                            android:text="随机卡片"
+                            android:textSize="16sp" />
+
+                        <View
+                            android:layout_width="wrap_content"
+                            android:layout_height="8dp"
+                            android:layout_weight="1" />
+
+                        <android.support.v7.widget.SwitchCompat
+                            android:id="@+id/sc_card"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginRight="16dp" />
+
+                    </LinearLayout>
+
+                    <LinearLayout
                         android:id="@+id/ll_bright"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
